# perfkit-dashboard-imgui

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
dashboard-v1/: CMakeLists.txt  main.cpp  platform.cpp
dashboard-v1/app/: application.cpp  application.hpp  relay_slot.hpp  session_slot.cpp  session_slot.hpp  session_slot_trace_context.cpp  session_slot_trace_context.hpp  utility.hpp
dashboard-v1/classes/: if_session_connection.hpp  session_context.cpp  session_context.hpp
dashboard-v1/classes/connection/: plain_tcp.cpp  plain_tcp.hpp
dashboard-v2/: .clang-format  Application-Graphics.cpp  Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  stdafx.h
dashboard-v2/interfaces/: RpcSessionOwner.hpp  Session.cpp  Session.hpp
dashboard-v2/rsrc/: icon.rc
dashboard-v2/sessions/: BasicPerfkitNetClient-SessionBuilder.cpp  BasicPerfkitNetClient.cpp  BasicPerfkitNetClient.hpp  IndepServerClientSession.cpp  IndepServerClientSession.hpp  PerfkitTcpRawClient.cpp  PerfkitTcpRawClient.hpp  SessionDiscoverAgent.cpp  SessionDiscoverAgent.hpp
dashboard-v2/utils/: JsonEdit.cpp  JsonEdit.hpp  Misc.cpp  Misc.hpp  Notify.cpp  Notify.hpp  TimePlot.cpp  TimePlot.hpp  TimePlotSlotProxy.cpp  TimePlotSlotProxy.hpp
dashboard-v2/widgets/: ConfigWindow.cpp  ConfigWindow.hpp  GraphicWindow.cpp  GraphicWindow.hpp  TimePlot.cpp  TimePlot.hpp  TraceWindow.cpp  TraceWindow.hpp
dashboard-v2/widgets/graphics/: GraphicContext.cpp  GraphicContext.hpp
misc/locale/: ko-KR.json
src/: CMakeLists.txt  imgui-extension.cpp  imgui-extension.h  main.cpp  platform.cpp
src/app/: application.cpp  application.hpp  relay_slot.hpp  session_slot.cpp  session_slot.hpp  session_slot_trace_context.cpp  session_slot_trace_context.hpp  utility.cpp  utility.hpp
src/classes/: application.cpp  application.hpp  if_session_connection.hpp  session_context.cpp  session_context.hpp
src/classes/connection/: plain_tcp.cpp  plain_tcp.hpp
src/model/: if_session_connection.hpp
third/: CMakeLists.txt
third/gl/: CMakeLists.txt
third/imgui-extension/: imgui-extension.cpp  imgui-extension.h  imgui_extension.cpp  imgui_extension.h
